--- a/style.css
+++ b/style.css
@@ -2,24 +2,45 @@
 	box-sizing: border-box;
 }
 body {
-	background: #111;
+	background: red;
 	min-height: 100vh;
 	padding: 0;
 	margin: 0;
 }
 
+h1, h2 {
+  position: ;
+  color: white;
+  font-family: arial;
+  margin: 0 auto;
+  text-align: center;
+}
+
+h2 {
+  color: green;
+}
+
+header {
+  position: relative;
+  top: 50px;
+}
+
+
+
+
 .gallery {
 	position: absolute;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	overflow: hidden;
+  z-index: 5;
 }
 
 .cards {
 	position: absolute;
-	width: 70vw;
-	height: 100vh;
-	top: 50%;
+	width: 50vw;
+	height: 100%;
+	top: 45%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 }
@@ -28,17 +49,17 @@ body {
 	list-style: none;
 	padding: 0;
 	margin: 0;
-	width: 70vw;
-	height: 100vh;
-	background-color: #eee;
+	width: 100%;
+	height: 300px;
+	background-color: #fff;
 	position: absolute;
-	top: 0;
+	top: 25%;
 	left: 0;
-	border-radius: 50rem;
+	border-radius: 10px;
 }
 
 iframe {
   width: 100%;
   height: 100%;
-  border-radius: 50rem;
+  border-radius: 10px;
 }
